--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@babel/preset-react": "7.14.5",
     "@babel/register": "7.15.3",
     "@babel/runtime": "7.15.3",
-    "@commitlint/cli": "13.1.0",
-    "@commitlint/config-conventional": "13.1.0",
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
     "@testing-library/react-hooks": "7.0.1",
     "@types/jest": "27.0.1",
     "@types/react": "17.0.19",
@@ -84,5 +84,8 @@
   "bugs": {
     "url": "https://github.com/helderburato/use-tgl/issues"
   },
-  "homepage": "https://github.com/helderburato/use-tgl#readme"
+  "homepage": "https://github.com/helderburato/use-tgl#readme",
+  "lint-staged": {
+    "*.{js,ts,tsx}": "eslint --cache --fix"
+  }
 }
