chore: migrate from Jest to Vitest
- Removed Jest, @types/jest, ts-jest, babel-jest, eslint-plugin-jest
- Added Vitest, @vitest/ui, @vitest/coverage-v8
- Replaced @testing-library/react-hooks with @testing-library/react
- Created vitest.config.ts with jsdom environment
- Updated test scripts: test, test:watch, test:ui, test:coverage
- Updated .eslintrc.js to remove Jest, add Vitest globals
- Updated test file to import from @testing-library/react and Vitest
- Deleted jest.config.js

All 7 tests passing with coverage.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "README.md"
   ],
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watchAll",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext .js,.ts,.tsx",
     "format": "prettier --write .",
     "build:clean": "rm -rf ./dist",
@@ -35,13 +37,15 @@
     "@babel/runtime": "7.20.6",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.2",
-    "@testing-library/react-hooks": "7.0.2",
-    "@types/jest": "27.4.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "18.0.15",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "@vitest/coverage-v8": "^4.0.18",
+    "@vitest/ui": "^4.0.18",
     "babel-eslint": "10.1.0",
-    "babel-jest": "29.3.1",
     "babel-loader": "8.2.3",
     "babel-preset-minify": "0.5.2",
     "commitizen": "4.2.6",
@@ -49,13 +53,13 @@
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "^27.1.6",
     "eslint-plugin-jsx-a11y": "6.6.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.3.0",
+    "happy-dom": "^20.4.0",
     "husky": "^7.0.4",
-    "jest": "27.5.1",
+    "jsdom": "^27.4.0",
     "lint-staged": "^13.0.3",
     "prettier": "2.7.1",
     "react": "18.2.0",
@@ -65,8 +69,8 @@
     "rollup-plugin-replace": "2.2.0",
     "rollup-plugin-typescript2": "0.32.1",
     "rollup-plugin-uglify": "6.0.4",
-    "ts-jest": "27.1.5",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "vitest": "^4.0.18"
   },
   "repository": {
     "type": "git",
