--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,17 +13,16 @@ jobs:
     timeout-minutes: 10
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '14'
+          node-version: '20'
+          cache: 'npm'
 
-      - name: Install dependencies & cache
-        uses: bahmutov/npm-install@v1
-        with:
-          useLockFile: true
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run tests
         run: npm run test
@@ -34,17 +33,16 @@ jobs:
     timeout-minutes: 10
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '14'
+          node-version: '20'
+          cache: 'npm'
 
-      - name: Install dependencies & cache
-        uses: bahmutov/npm-install@v1
-        with:
-          useLockFile: true
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run lint
         run: npm run lint
@@ -55,17 +53,16 @@ jobs:
     timeout-minutes: 10
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '14'
+          node-version: '20'
+          cache: 'npm'
 
-      - name: Install dependencies & cache
-        uses: bahmutov/npm-install@v1
-        with:
-          useLockFile: true
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run build
         run: npm run build
